# euterpe

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
app/core/: harmony.py
