[project]
name = "euterpe"
version = "0.1.0"
description = "A Python API project using UV, music21, and strict code quality standards."
authors = ["Wen Qing Lim <lim.wenq@gmail.com>"]
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.116.1",
    "music21>=9.7.1",
    "pydantic-settings>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "B", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
